Improve HTML elements

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
     </head>
     <body id="body">
         <main id="main">
-            <div id="header">
+            <header id="header">
                 <h1 id="header-text">Calculator</h1>
-            </div>
+            </header>
             <div id="body">
-                <div id="footer">
-                    <a href="https://github.com/DrewRoss137" target="_blank" id="github-logo">
-                        <img src="github-logo.svg" alt="GitHub Logo" id="github-logo">
-                    </a>
+                <div id="calculator">
+
                 </div>
             </div>
+            <footer id="footer">
+                <a href="https://github.com/DrewRoss137" target="_blank" id="github-logo">
+                    <img src="github-logo.svg" alt="GitHub Logo" id="github-logo">
+                </a>
+            </footer>
+
         </main>
         <script src="scripts.js"></script>
     </body>
