--- a/index.html
+++ b/index.html
@@ -17,7 +17,33 @@
             </header>
             <div id="body">
                 <div id="calculator">
-
+                    <div id="display"></div>
+                    <div id="buttons">
+                        <button class="number-buttons" id="9-button">9</button>
+                        <button class="number-buttons" id="8-button">8</button>
+                        <button class="number-buttons" id="7-button">7</button>
+                        <button class="number-buttons" id="6-button">6</button>
+                        <button class="number-buttons" id="5-button">5</button>
+                        <button class="number-buttons" id="4-button">4</button>
+                        <button class="number-buttons" id="3-button">3</button>
+                        <button class="number-buttons" id="2-button">2</button>
+                        <button class="number-buttons" id="1-button">1</button>
+                        <button class="number-buttons" id="0-button">0</button>
+                        <button id="positive-negative-button">+/-</button>
+                        <button id="decimal-point-button">.</button>
+                        <button class="operator-buttons" id="equals-button">=</button>
+                        <button class="operator-buttons"id="subtraction-button">-</button>
+                        <button class="operator-buttons"id="addition-button">+</button>
+                        <button class="operator-buttons"id="division-button">/</button>
+                        <button class="operator-buttons"id="multiplication-button">x</button>
+                        <button class="miscellaneous-buttons" id="percentage-button">%</button>
+                        <button class="miscellaneous-buttons" id="exponent-button">?</button>
+                        <button class="miscellaneous-buttons" id="factorial-button">?</button>
+                        <button class="miscellaneous-buttons" id="exponent-button">?</button>
+                        <button class="miscellaneous-buttons" id="clear-button">C</button>
+                        <button class="miscellaneous-buttons" id="all-clear-button">AC</button>
+                        <button class="miscellaneous-buttons" id="ans-button">ANS</button>
+                    </div>
                 </div>
             </div>
             <footer id="footer">
