Remove unnecessary ID's

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
     </head>
-    <body id="body">
-        <main id="main">
-            <header id="header">
-                <h1 id="header-text">Calculator</h1>
+    <body>
+        <main>
+            <header>
+                <h1>Calculator</h1>
             </header>
             <div id="body">
                 <div id="calculator">
-                    <div id="display"></div>
+                    <div id="display">0123456789</div>
                     <div id="buttons">
                         <button class="number-buttons">x<sup>x</sup></button>
                         <button class="number-buttons">x!</button>
@@ -48,11 +48,10 @@
                 </div>
             </div>
             <footer id="footer">
-                <a href="https://github.com/DrewRoss137" target="_blank" id="github-logo">
+                <a href="https://github.com/DrewRoss137" id="github-logo" target="_blank" >
                     <img src="github-logo.svg" alt="GitHub Logo" id="github-logo">
                 </a>
             </footer>
-
         </main>
         <script src="scripts.js"></script>
     </body>
