--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
                 <div id="calculator">
                     <div id="display">0123456789</div>
                     <div id="buttons">
-                        <button class="number-buttons">x<sup>x</sup></button>
-                        <button class="number-buttons">x!</button>
-                        <button class="number-buttons">%</button>
-                        <button class="number-buttons">Colour</button>
-                        <button class="number-buttons">Power</button>
+                        <button class="miscellaneous-buttons">x<sup>x</sup></button>
+                        <button class="miscellaneous-buttons">x!</button>
+                        <button class="miscellaneous-buttons">%</button>
+                        <button class="miscellaneous-buttons">Colour</button>
+                        <button class="miscellaneous-buttons">Power</button>
                         <button class="number-buttons">7</button>
                         <button class="number-buttons">8</button>
                         <button class="number-buttons">9</button>
-                        <button class="number-buttons">DEL</button>
-                        <button class="number-buttons">AC</button>
+                        <button class="miscellaneous-buttons">DEL</button>
+                        <button class="miscellaneous-buttons">AC</button>
                         <button class="number-buttons">4</button>
                         <button class="number-buttons">5</button>
                         <button class="number-buttons">6</button>
-                        <button class="">x</button>
-                        <button class="">÷</button>
+                        <button class="operator-buttons">x</button>
+                        <button class="operator-buttons">÷</button>
                         <button class="number-buttons">1</button>
                         <button class="number-buttons">2</button>
                         <button class="number-buttons">3</button>
-                        <button class="number-buttons">+</button>
+                        <button class="operator-buttons">+</button>
                         <button class="">-</button>
                         <button class="number-buttons">0</button>
                         <button class="">.</button>
                         <button class="">+/-</button>
                         <button class="">Ans</button>
-                        <button class="">=</button>
+                        <button class="operator-buttons">=</button>
                     </div>
                 </div>
             </div>
