--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <div id="calculator">
                     <div id="display">0123456789</div>
                     <div id="buttons">
-                        <button class="miscellaneous-buttons">x<sup>x</sup></button>
-                        <button class="miscellaneous-buttons">x!</button>
-                        <button class="miscellaneous-buttons">%</button>
-                        <button class="miscellaneous-buttons">Colour</button>
-                        <button class="miscellaneous-buttons">Power</button>
+                        <button class="modifier-buttons">x<sup>x</sup></button>
+                        <button class="modifier-buttons">x!</button>
+                        <button class="modifier-buttons">%</button>
+                        <button class="word-buttons">Colour</button>
+                        <button class="word-buttons">Power</button>
                         <button class="number-buttons">7</button>
                         <button class="number-buttons">8</button>
                         <button class="number-buttons">9</button>
@@ -38,11 +38,11 @@
                         <button class="number-buttons">2</button>
                         <button class="number-buttons">3</button>
                         <button class="operator-buttons">+</button>
-                        <button class="">-</button>
+                        <button class="operator-buttons" id="subtraction-button">-</button>
                         <button class="number-buttons">0</button>
-                        <button class="">.</button>
-                        <button class="">+/-</button>
-                        <button class="">Ans</button>
+                        <button class="modifier-buttons">.</button>
+                        <button class="modifier-buttons">+/-</button>
+                        <button class="miscellaneous-buttons">Ans</button>
                         <button class="operator-buttons">=</button>
                     </div>
                 </div>
