--- a/index.html
+++ b/index.html
@@ -17,33 +17,33 @@
             </header>
             <div id="body">
                 <div id="calculator">
-                    <div id="display">0123456789</div>
+                    <div id="display"></div>
                     <div id="buttons">
-                        <button class="modifier-buttons">x<sup>x</sup></button>
-                        <button class="modifier-buttons">x!</button>
-                        <button class="modifier-buttons">%</button>
-                        <button class="word-buttons">Colour</button>
-                        <button class="word-buttons">Power</button>
-                        <button class="number-buttons">7</button>
-                        <button class="number-buttons">8</button>
-                        <button class="number-buttons">9</button>
-                        <button class="miscellaneous-buttons">DEL</button>
-                        <button class="miscellaneous-buttons">AC</button>
-                        <button class="number-buttons">4</button>
-                        <button class="number-buttons">5</button>
-                        <button class="number-buttons">6</button>
+                        <button class="function-buttons"><i>n</i><sup>x</sup></button>
+                        <button class="function-buttons"><i>n</i>!</button>
+                        <button class="function-buttons">%</button>
+                        <button class="miscellaneous-buttons">Colour</button>
+                        <button class="miscellaneous-buttons">Power</button>
+                        <button class="digit-buttons">7</button>
+                        <button class="digit-buttons">8</button>
+                        <button class="digit-buttons">9</button>
+                        <button class="rescind-buttons">DEL</button>
+                        <button class="rescind-buttons">AC</button>
+                        <button class="digit-buttons">4</button>
+                        <button class="digit-buttons">5</button>
+                        <button class="digit-buttons">6</button>
                         <button class="operator-buttons">x</button>
                         <button class="operator-buttons">÷</button>
-                        <button class="number-buttons">1</button>
-                        <button class="number-buttons">2</button>
-                        <button class="number-buttons">3</button>
+                        <button class="digit-buttons">1</button>
+                        <button class="digit-buttons">2</button>
+                        <button class="digit-buttons">3</button>
                         <button class="operator-buttons">+</button>
-                        <button class="operator-buttons" id="subtraction-button">-</button>
-                        <button class="number-buttons">0</button>
-                        <button class="modifier-buttons">.</button>
-                        <button class="modifier-buttons">+/-</button>
-                        <button class="miscellaneous-buttons">Ans</button>
-                        <button class="operator-buttons">=</button>
+                        <button class="operator-buttons" id="subtraction-button">–</button>
+                        <button class="digit-buttons">0</button>
+                        <button class="modifier-buttons" id="decimal-point-button">.</button>
+                        <button class="modifier-buttons">+/–</button>
+                        <button class="answer-buttons" id="answer-button">Ans</button>
+                        <button class="answer-buttons" id="equals-button">=</button>
                     </div>
                 </div>
             </div>
