--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         <button class="function-buttons"><i>n</i><sup>x</sup></button>
                         <button class="function-buttons"><i>n</i>!</button>
                         <button class="function-buttons">%</button>
-                        <button class="miscellaneous-buttons">Colour</button>
-                        <button class="miscellaneous-buttons">Power</button>
+                        <button class="miscellaneous-buttons">COLOUR</button>
+                        <button class="miscellaneous-buttons">POWER</button>
                         <button class="digit-buttons">7</button>
                         <button class="digit-buttons">8</button>
                         <button class="digit-buttons">9</button>
@@ -42,7 +42,7 @@
                         <button class="digit-buttons">0</button>
                         <button class="modifier-buttons" id="decimal-point-button">.</button>
                         <button class="modifier-buttons">+/–</button>
-                        <button class="answer-buttons" id="answer-button">Ans</button>
+                        <button class="answer-buttons" id="answer-button">ANS</button>
                         <button class="answer-buttons" id="equals-button">=</button>
                     </div>
                 </div>
