Create button ID's

--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
                 <div id="calculator">
                     <div id="display"></div>
                     <div id="buttons">
-                        <button class="function-buttons"><i>n</i><sup>x</sup></button>
-                        <button class="function-buttons"><i>n</i>!</button>
-                        <button class="function-buttons">%</button>
-                        <button class="miscellaneous-buttons">COLOUR</button>
-                        <button class="miscellaneous-buttons">POWER</button>
-                        <button class="digit-buttons">7</button>
-                        <button class="digit-buttons">8</button>
-                        <button class="digit-buttons">9</button>
-                        <button class="rescind-buttons">DEL</button>
-                        <button class="rescind-buttons">AC</button>
-                        <button class="digit-buttons">4</button>
-                        <button class="digit-buttons">5</button>
-                        <button class="digit-buttons">6</button>
-                        <button class="operator-buttons">x</button>
-                        <button class="operator-buttons">÷</button>
-                        <button class="digit-buttons">1</button>
-                        <button class="digit-buttons">2</button>
-                        <button class="digit-buttons">3</button>
-                        <button class="operator-buttons">+</button>
+                        <button class="function-buttons" id="exponent-button"><i>n</i><sup>x</sup></button>
+                        <button class="function-buttons" id="factorial-button"><i>n</i>!</button>
+                        <button class="function-buttons" id="percentage-button">%</button>
+                        <button class="miscellaneous-buttons" id="colour-button">COLOUR</button>
+                        <button class="miscellaneous-buttons" id="power-button">POWER</button>
+                        <button class="digit-buttons" id="7-button">7</button>
+                        <button class="digit-buttons" id="8-button">8</button>
+                        <button class="digit-buttons" id="9-button">9</button>
+                        <button class="rescind-buttons" id="delete-button">DEL</button>
+                        <button class="rescind-buttons" id="all-clear-button">AC</button>
+                        <button class="digit-buttons" id="4-button">4</button>
+                        <button class="digit-buttons" id="5-button">5</button>
+                        <button class="digit-buttons" id="6-button">6</button>
+                        <button class="operator-buttons" id="multiplication-button">x</button>
+                        <button class="operator-buttons" id="division-button">÷</button>
+                        <button class="digit-buttons" id="1-button">1</button>
+                        <button class="digit-buttons" id="2-button">2</button>
+                        <button class="digit-buttons" id="3-button">3</button>
+                        <button class="operator-buttons" id="addition-button">+</button>
                         <button class="operator-buttons" id="subtraction-button">–</button>
-                        <button class="digit-buttons">0</button>
+                        <button class="digit-buttons" id="0-button">0</button>
                         <button class="modifier-buttons" id="decimal-point-button">.</button>
-                        <button class="modifier-buttons">+/–</button>
+                        <button class="modifier-buttons" id="sign-button">+/–</button>
                         <button class="answer-buttons" id="answer-button">ANS</button>
                         <button class="answer-buttons" id="equals-button">=</button>
                     </div>
