--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
                     <div id="buttons">
                         <button class="function-buttons" id="exponent-button"><i>n</i><sup>x</sup></button>
                         <button class="function-buttons" id="factorial-button"><i>n</i>!</button>
-                        <button class="function-buttons" id="percentage-button">%</button>
+                        <button class="function-buttons" id="percent-button">%</button>
                         <button class="miscellaneous-buttons" id="colour-button">COLOUR</button>
                         <button class="miscellaneous-buttons" id="power-button">POWER</button>
-                        <button class="digit-buttons" id="7-button">7</button>
-                        <button class="digit-buttons" id="8-button">8</button>
-                        <button class="digit-buttons" id="9-button">9</button>
+                        <button class="digit-buttons" id="seven-button">7</button>
+                        <button class="digit-buttons" id="eight-button">8</button>
+                        <button class="digit-buttons" id="nine-button">9</button>
                         <button class="rescind-buttons" id="delete-button">DEL</button>
                         <button class="rescind-buttons" id="all-clear-button">AC</button>
-                        <button class="digit-buttons" id="4-button">4</button>
-                        <button class="digit-buttons" id="5-button">5</button>
-                        <button class="digit-buttons" id="6-button">6</button>
+                        <button class="digit-buttons" id="four-button">4</button>
+                        <button class="digit-buttons" id="five-button">5</button>
+                        <button class="digit-buttons" id="six-button">6</button>
                         <button class="operator-buttons" id="multiplication-button">x</button>
                         <button class="operator-buttons" id="division-button">÷</button>
-                        <button class="digit-buttons" id="1-button">1</button>
-                        <button class="digit-buttons" id="2-button">2</button>
-                        <button class="digit-buttons" id="3-button">3</button>
+                        <button class="digit-buttons" id="one-button">1</button>
+                        <button class="digit-buttons" id="two-button">2</button>
+                        <button class="digit-buttons" id="three-button">3</button>
                         <button class="operator-buttons" id="addition-button">+</button>
                         <button class="operator-buttons" id="subtraction-button">–</button>
-                        <button class="digit-buttons" id="0-button">0</button>
+                        <button class="digit-buttons" id="zero-button">0</button>
                         <button class="modifier-buttons" id="decimal-point-button">.</button>
                         <button class="modifier-buttons" id="sign-button">+/–</button>
                         <button class="answer-buttons" id="answer-button">ANS</button>
