Update element classes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Calculator</h1>
             </header>
             <div id="body">
-                <div id="calculator">
+                <div class="calculator" id="calculator">
                     <div id="display"></div>
                     <div id="buttons">
                         <button class="function-buttons" id="exponent-button"><i>n</i><sup>x</sup></button>
