Rename percent button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div id="buttons">
                         <button class="function-buttons" id="exponent-button"><i>n</i><sup>x</sup></button>
                         <button class="function-buttons" id="factorial-button"><i>n</i>!</button>
-                        <button class="function-buttons" id="percent-button">%</button>
+                        <button class="function-buttons" id="modulo-button">%</button>
                         <button class="miscellaneous-buttons" id="colour-button">COLOUR</button>
                         <button class="miscellaneous-buttons" id="power-button">POWER</button>
                         <button class="digit-buttons" id="seven-button">7</button>
