--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <title>Calculator</title>
     </head>
     <body>
-        <main>
-            <header>
-                <h1>Calculator</h1>
+        <main id="main">
+            <header id="header">
+                <h1 id="header-text">Calculator</h1>
             </header>
             <div id="body">
-                <div class="calculator" id="calculator">
-                    <div id="display"></div>
+                <div id="calculator">
+                    <div id="display">0123456789</div>
                     <div id="buttons">
                         <button class="function-buttons" id="exponent-button"><i>n</i><sup>x</sup></button>
                         <button class="function-buttons" id="factorial-button"><i>n</i>!</button>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <footer id="footer">
-                <a href="https://github.com/DrewRoss137" id="github-logo" target="_blank" >
+                <a href="https://github.com/DrewRoss137" id="github-logo" rel="noopener" target="_blank" >
                     <img src="github-logo.svg" alt="GitHub Logo" id="github-logo">
                 </a>
             </footer>
