Remove obsolete element text

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             </header>
             <div id="body">
                 <div id="calculator">
-                    <div id="display">0123456789</div>
+                    <div id="display"></div>
                     <div id="buttons">
                         <button class="function-buttons" id="exponent-button"><i>n</i><sup>x</sup></button>
                         <button class="function-buttons" id="factorial-button"><i>n</i>!</button>
                         <button class="function-buttons" id="modulo-button">%</button>
-                        <button class="miscellaneous-buttons" id="colour-button">COLOUR</button>
-                        <button class="miscellaneous-buttons" id="power-button">POWER</button>
+                        <button class="miscellaneous-buttons" id="colour-button"></button>
+                        <button class="miscellaneous-buttons" id="power-button"></button>
                         <button class="digit-buttons" id="seven-button">7</button>
                         <button class="digit-buttons" id="eight-button">8</button>
                         <button class="digit-buttons" id="nine-button">9</button>
