Add favicon to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head class="head" id="head">
         <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
         <link href="https://fonts.googleapis.com" rel="preconnect"/>
         <link href="styles.css" rel="stylesheet">
