--- a/index.html
+++ b/index.html
@@ -1,59 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head class="head" id="head">
-        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
-        <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
-        <link href="https://fonts.googleapis.com" rel="preconnect"/>
-        <link href="styles.css" rel="stylesheet">
-        <meta charset="UTF-8">
-        <meta content="IE=edge" http-equiv="X-UA-Compatible">
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <title>Calculator</title>
-    </head>
-    <body class="body" id="body">
-        <main class="main" id="main">
-            <header class="header" id="header">
-                <h1 class="header-text" id="header-text">Calculator</h1>
-            </header>
-            <div class="container" id="container">
-                <div class="calculator" id="calculator">
-                    <div class="display" id="display"></div>
-                    <div class="buttons" id="buttons">
-                        <button class="function-buttons" id="exponent-button"><i>n</i><sup>x</sup></button>
-                        <button class="function-buttons" id="factorial-button"><i>n</i>!</button>
-                        <button class="function-buttons" id="modulo-button">%</button>
-                        <button class="miscellaneous-buttons" id="colour-button"></button>
-                        <button class="miscellaneous-buttons" id="power-button"></button>
-                        <button class="digit-buttons" id="seven-button">7</button>
-                        <button class="digit-buttons" id="eight-button">8</button>
-                        <button class="digit-buttons" id="nine-button">9</button>
-                        <button class="rescind-buttons" id="delete-button">DEL</button>
-                        <button class="rescind-buttons" id="all-clear-button">AC</button>
-                        <button class="digit-buttons" id="four-button">4</button>
-                        <button class="digit-buttons" id="five-button">5</button>
-                        <button class="digit-buttons" id="six-button">6</button>
-                        <button class="operator-buttons" id="multiplication-button">x</button>
-                        <button class="operator-buttons" id="division-button">÷</button>
-                        <button class="digit-buttons" id="one-button">1</button>
-                        <button class="digit-buttons" id="two-button">2</button>
-                        <button class="digit-buttons" id="three-button">3</button>
-                        <button class="operator-buttons" id="addition-button">+</button>
-                        <button class="operator-buttons" id="subtraction-button">–</button>
-                        <button class="digit-buttons" id="zero-button">0</button>
-                        <button class="modifier-buttons" id="decimal-point-button">.</button>
-                        <button class="modifier-buttons" id="sign-button">+/–</button>
-                        <button class="answer-buttons" id="answer-button">ANS</button>
-                        <button class="answer-buttons" id="equals-button">=</button>
-                    </div>
-                </div>
-            </div>
-            <footer class="footer" id="footer">
-                <a class="github-logo "id="github-logo" href="https://github.com/DrewRoss137" rel="noopener" target="_blank">
-                    <img alt="GitHub Logo" class="github-logo-svg" id="github-logo-svg" src="github-logo.svg">
-                </a>
-            </footer>  
-        </main>
-        <script src="scripts.js"></script>
-    </body>
+  <head class="head" id="head">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="styles.css" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Calculator</title>
+  </head>
+  <body class="body" id="body">
+    <main class="main" id="main">
+      <header class="header" id="header">
+        <h1 class="header-text" id="header-text">Calculator</h1>
+      </header>
+      <div class="container" id="container">
+        <div class="calculator" id="calculator">
+          <div class="display" id="display"></div>
+          <div class="buttons" id="buttons">
+            <button class="function-buttons" id="exponent-button">
+              <i>n</i><sup>x</sup>
+            </button>
+            <button class="function-buttons" id="factorial-button">
+              <i>n</i>!
+            </button>
+            <button class="function-buttons" id="modulo-button">%</button>
+            <button class="miscellaneous-buttons" id="colour-button"></button>
+            <button class="miscellaneous-buttons" id="power-button"></button>
+            <button class="digit-buttons" id="seven-button">7</button>
+            <button class="digit-buttons" id="eight-button">8</button>
+            <button class="digit-buttons" id="nine-button">9</button>
+            <button class="rescind-buttons" id="delete-button">DEL</button>
+            <button class="rescind-buttons" id="all-clear-button">AC</button>
+            <button class="digit-buttons" id="four-button">4</button>
+            <button class="digit-buttons" id="five-button">5</button>
+            <button class="digit-buttons" id="six-button">6</button>
+            <button class="operator-buttons" id="multiplication-button">
+              x
+            </button>
+            <button class="operator-buttons" id="division-button">÷</button>
+            <button class="digit-buttons" id="one-button">1</button>
+            <button class="digit-buttons" id="two-button">2</button>
+            <button class="digit-buttons" id="three-button">3</button>
+            <button class="operator-buttons" id="addition-button">+</button>
+            <button class="operator-buttons" id="subtraction-button">–</button>
+            <button class="digit-buttons" id="zero-button">0</button>
+            <button class="modifier-buttons" id="decimal-point-button">
+              .
+            </button>
+            <button class="modifier-buttons" id="sign-button">+/–</button>
+            <button class="answer-buttons" id="answer-button">ANS</button>
+            <button class="answer-buttons" id="equals-button">=</button>
+          </div>
+        </div>
+      </div>
+      <footer class="footer" id="footer">
+        <a
+          class="github-logo"
+          id="github-logo"
+          href="https://github.com/DrewRoss137"
+          rel="noopener"
+          target="_blank"
+        >
+          <img
+            alt="GitHub Logo"
+            class="github-logo-svg"
+            id="github-logo-svg"
+            src="github-logo.svg"
+          />
+        </a>
+      </footer>
+    </main>
+    <script src="scripts.js"></script>
+  </body>
 </html>
